<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Name Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/fullname"
        android:textSize="17sp" />

    <!-- Input Name -->

    <EditText
        android:id="@+id/inputfname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:inputType="text"
        android:layout_marginBottom="15dip"
        android:singleLine="true" />

    <!-- Price Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/email"
        android:textSize="17sp" />

    <!-- Input Price -->

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="textEmailAddress"
        android:singleLine="true" />


    <!-- Description Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/message"
        android:textSize="17sp" />

    <!-- Input description -->

    <EditText
        android:id="@+id/inputmessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:gravity="top"
        android:lines="4"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- Button Create Product -->

        <Button
            android:id="@+id/btnSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send" />

        <!-- Button Create Product -->

        <Button
            android:id="@+id/btnBack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>