<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!-- firstname -->

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/fname"
      android:textSize="17sp"/>

    <!-- firstname input -->

    <EditText
        android:id="@+id/fname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView1"
        android:layout_margin="5dip"
        android:inputType="text"
        android:layout_marginBottom="15dip"
        android:singleLine="true" />

    <!-- lastname -->

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fname"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/lname"
       android:textSize="17sp"/>

    <!-- lastname input -->

    <EditText
        android:id="@+id/lname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
           android:inputType="text"
        android:layout_below="@+id/TextView2"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:singleLine="true" />

    <!-- username -->

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lname"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/username_textview"
        android:textSize="17sp" />

    <!-- username input -->

    <EditText
        android:id="@+id/uname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView3"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:singleLine="true"
          android:inputType="text" />

    <!-- password -->

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/uname"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/password_textview"
        android:textSize="17sp"/>

    <!-- password input -->

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView4"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="textPassword"
        android:singleLine="true" />

    <!-- address -->

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pass"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/address"
        android:textSize="17sp" />

    <!-- address input -->

    <EditText
        android:id="@+id/addr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:inputType="text"
        android:layout_below="@+id/TextView5"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:singleLine="true" />

    <!-- contact -->

    <TextView
        android:id="@+id/TextView6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addr"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/contact"
       android:textSize="17sp" />

    <!-- contact input -->

    <EditText
        android:id="@+id/contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:inputType="text"
        android:layout_below="@+id/TextView6"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:singleLine="true" />

    <!-- Button Register -->

    <Button
        android:id="@+id/btnreg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/contact"
        android:text="@string/submit" />

    <!-- Button Cancel -->

    <Button
        android:id="@+id/btncancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnreg"
        android:text="@string/cancel" />

</RelativeLayout>